improved Range